@@ -1,12 +1,31 @@
+/*
+ * Copyright 2021 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.github.mdc.common;
 
 import java.lang.reflect.InvocationHandler;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.GregorianCalendar;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import com.esotericsoftware.kryo.Kryo;
 
+import com.esotericsoftware.kryonetty.kryo.KryoNetty;
 import de.javakaffee.kryoserializers.ArraysAsListSerializer;
 import de.javakaffee.kryoserializers.CollectionsEmptyListSerializer;
 import de.javakaffee.kryoserializers.CollectionsEmptyMapSerializer;
@@ -41,42 +60,60 @@ import de.javakaffee.kryoserializers.guava.UnmodifiableNavigableSetSerializer;
  * This class registers the custom serializers for the collections object.
  */
 public class RegisterKyroSerializers {
-	
+
 	/**
 	 * This method registers the serializers for the java collections and the guava objects.
 	 * @param kryo
 	 */
 	static void register(Kryo kryo) {
-		kryo.register( Arrays.asList().getClass(), new ArraysAsListSerializer());
-		kryo.register( Collections.EMPTY_LIST.getClass(), new CollectionsEmptyListSerializer() );
-		kryo.register( Collections.EMPTY_MAP.getClass(), new CollectionsEmptyMapSerializer() );
-		kryo.register( Collections.EMPTY_SET.getClass(), new CollectionsEmptySetSerializer() );
-		kryo.register( Collections.singletonList( MDCConstants.EMPTY ).getClass(), new CollectionsSingletonListSerializer() );
-		kryo.register( Collections.singleton(MDCConstants.EMPTY).getClass(), new CollectionsSingletonSetSerializer() );
-		kryo.register( Collections.singletonMap( MDCConstants.EMPTY, MDCConstants.EMPTY ).getClass(), new CollectionsSingletonMapSerializer() );
-		kryo.register( GregorianCalendar.class, new GregorianCalendarSerializer() );
-		kryo.register( InvocationHandler.class, new JdkProxySerializer() );
-		UnmodifiableCollectionsSerializer.registerSerializers( kryo );
-		SynchronizedCollectionsSerializer.registerSerializers( kryo );
+		kryo.register(Arrays.asList().getClass(), new ArraysAsListSerializer());
+		kryo.register(Collections.EMPTY_LIST.getClass(), new CollectionsEmptyListSerializer());
+		kryo.register(Collections.EMPTY_MAP.getClass(), new CollectionsEmptyMapSerializer());
+		kryo.register(Collections.EMPTY_SET.getClass(), new CollectionsEmptySetSerializer());
+		kryo.register(List.of(MDCConstants.EMPTY).getClass(), new CollectionsSingletonListSerializer());
+		kryo.register(Set.of(MDCConstants.EMPTY).getClass(), new CollectionsSingletonSetSerializer());
+		kryo.register(Map.of(MDCConstants.EMPTY, MDCConstants.EMPTY).getClass(), new CollectionsSingletonMapSerializer());
+		kryo.register(GregorianCalendar.class, new GregorianCalendarSerializer());
+		kryo.register(InvocationHandler.class, new JdkProxySerializer());
+		UnmodifiableCollectionsSerializer.registerSerializers(kryo);
+		SynchronizedCollectionsSerializer.registerSerializers(kryo);
 
-		kryo.register( CGLibProxySerializer.CGLibProxyMarker.class, new CGLibProxySerializer( ) );
+		kryo.register(CGLibProxySerializer.CGLibProxyMarker.class, new CGLibProxySerializer( ));
 		// guava ImmutableList, ImmutableSet, ImmutableMap, ImmutableMultimap, ImmutableTable, ReverseList, UnmodifiableNavigableSet
-		ImmutableListSerializer.registerSerializers( kryo );
-		ImmutableSetSerializer.registerSerializers( kryo );
-		ImmutableMapSerializer.registerSerializers( kryo );
-		ImmutableMultimapSerializer.registerSerializers( kryo );
-		ImmutableTableSerializer.registerSerializers( kryo );
-		ReverseListSerializer.registerSerializers( kryo );
-		UnmodifiableNavigableSetSerializer.registerSerializers( kryo );
+		ImmutableListSerializer.registerSerializers(kryo);
+		ImmutableSetSerializer.registerSerializers(kryo);
+		ImmutableMapSerializer.registerSerializers(kryo);
+		ImmutableMultimapSerializer.registerSerializers(kryo);
+		ImmutableTableSerializer.registerSerializers(kryo);
+		ReverseListSerializer.registerSerializers(kryo);
+		UnmodifiableNavigableSetSerializer.registerSerializers(kryo);
 		// guava ArrayListMultimap, HashMultimap, LinkedHashMultimap, LinkedListMultimap, TreeMultimap, ArrayTable, HashBasedTable, TreeBasedTable
-		ArrayListMultimapSerializer.registerSerializers( kryo );
-		HashMultimapSerializer.registerSerializers( kryo );
-		LinkedHashMultimapSerializer.registerSerializers( kryo );
-		LinkedListMultimapSerializer.registerSerializers( kryo );
-		TreeMultimapSerializer.registerSerializers( kryo );
-		ArrayTableSerializer.registerSerializers( kryo );
-		HashBasedTableSerializer.registerSerializers( kryo );
-		TreeBasedTableSerializer.registerSerializers( kryo );
+		ArrayListMultimapSerializer.registerSerializers(kryo);
+		HashMultimapSerializer.registerSerializers(kryo);
+		LinkedHashMultimapSerializer.registerSerializers(kryo);
+		LinkedListMultimapSerializer.registerSerializers(kryo);
+		TreeMultimapSerializer.registerSerializers(kryo);
+		ArrayTableSerializer.registerSerializers(kryo);
+		HashBasedTableSerializer.registerSerializers(kryo);
+		TreeBasedTableSerializer.registerSerializers(kryo);
+	}
+
+	static void register(KryoNetty kryo) {
+		kryo.register(Arrays.asList().getClass(), new ArraysAsListSerializer());
+		kryo.register(Collections.EMPTY_LIST.getClass(), new CollectionsEmptyListSerializer());
+		kryo.register(Collections.EMPTY_MAP.getClass(), new CollectionsEmptyMapSerializer());
+		kryo.register(Collections.EMPTY_SET.getClass(), new CollectionsEmptySetSerializer());
+		kryo.register(List.of(MDCConstants.EMPTY).getClass(), new CollectionsSingletonListSerializer());
+		kryo.register(Set.of(MDCConstants.EMPTY).getClass(), new CollectionsSingletonSetSerializer());
+		kryo.register(Map.of(MDCConstants.EMPTY, MDCConstants.EMPTY).getClass(), new CollectionsSingletonMapSerializer());
+		kryo.register(GregorianCalendar.class, new GregorianCalendarSerializer());
+		kryo.register(InvocationHandler.class, new JdkProxySerializer());
+
+		kryo.register(CGLibProxySerializer.CGLibProxyMarker.class, new CGLibProxySerializer( ));
+		// guava ImmutableList, ImmutableSet, ImmutableMap, ImmutableMultimap, ImmutableTable, ReverseList, UnmodifiableNavigableSet
+	}
+
+	private RegisterKyroSerializers() {
 	}
 
 }
