@@ -1,3 +1,18 @@
+/*
+ * Copyright 2021 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.github.mdc.tasks.executor;
 
 import java.io.ByteArrayOutputStream;
@@ -15,16 +30,15 @@ import org.jooq.lambda.tuple.Tuple2;
 import com.github.mdc.common.Context;
 import com.github.mdc.common.DataCruncherContext;
 import com.github.mdc.common.HeartBeatTaskScheduler;
-import com.github.mdc.common.MDCConstants;
 import com.github.mdc.common.ReducerValues;
 import com.github.mdc.common.RemoteDataFetcher;
 import com.github.mdc.common.ApplicationTask.TaskStatus;
 import com.github.mdc.common.ApplicationTask.TaskType;
 
-public class TaskExecutorReducer implements Runnable{
+public class TaskExecutorReducer implements Runnable {
 	static Logger log = Logger.getLogger(TaskExecutorReducer.class);
 	@SuppressWarnings("rawtypes")
-	Reducer cr = null;
+	Reducer cr;
 	ReducerValues rv;
 	File file;
 	@SuppressWarnings("rawtypes")
@@ -33,47 +47,45 @@ public class TaskExecutorReducer implements Runnable{
 	String applicationid;
 	String taskid;
 	int port;
-	@SuppressWarnings({ "rawtypes" })
-	public TaskExecutorReducer(ReducerValues rv,String applicationid, String taskid,
-			ClassLoader cl,int port,
+
+	@SuppressWarnings({"rawtypes"})
+	public TaskExecutorReducer(ReducerValues rv, String applicationid, String taskid,
+			ClassLoader cl, int port,
 			HeartBeatTaskScheduler hbts) throws Exception {
 		this.rv = rv;
 		Class<?> clz = null;
 		this.port = port;
 		try {
 			clz = cl.loadClass(rv.reducerclass);
-			cr = (Reducer) clz.newInstance();
+			cr = (Reducer) clz.getDeclaredConstructor().newInstance();
 			this.applicationid = applicationid;
 			this.taskid = taskid;
 		}
-		catch(Exception ex) {
-			log.debug("Exception in loading class:",ex);
-		}
-		finally {
-			
+		catch (Exception ex) {
+			log.debug("Exception in loading class:", ex);
 		}
 		this.hbts = hbts;
 	}
 
-	@SuppressWarnings({ "rawtypes", "unchecked" })
+	@SuppressWarnings({"rawtypes", "unchecked"})
 	@Override
 	public void run() {
 		var es = Executors.newSingleThreadExecutor();
 		try {
 			hbts.pingOnce(taskid, TaskStatus.RUNNING, TaskType.REDUCER, null);
-			log.debug("Submitted Reducer:"+applicationid+taskid);
+			log.debug("Submitted Reducer:" + applicationid + taskid);
 			var complete = new DataCruncherContext();
-			var apptaskcontextmap = new ConcurrentHashMap<String,Context>();
+			var apptaskcontextmap = new ConcurrentHashMap<String, Context>();
 			Context currentctx;
-			for (var tuple2 : (List<Tuple2>)rv.tuples) {
+			for (var tuple2 : (List<Tuple2>) rv.tuples) {
 				var ctx = new DataCruncherContext();
 				for (var apptaskids : (Collection<String>) tuple2.v2) {
-					if(apptaskcontextmap.get(apptaskids)!=null) {
+					if (apptaskcontextmap.get(apptaskids) != null) {
 						currentctx = apptaskcontextmap.get(apptaskids);
 					}
 					else {
 						currentctx = (Context) RemoteDataFetcher.readIntermediatePhaseOutputFromDFS(rv.appid,
-								(apptaskids), false);
+								apptaskids, false);
 						apptaskcontextmap.put(apptaskids, currentctx);
 					}
 					ctx.addAll(tuple2.v1, currentctx.get(tuple2.v1));
@@ -85,10 +97,10 @@ public class TaskExecutorReducer implements Runnable{
 				complete.add(results);
 			}
 			RemoteDataFetcher.writerIntermediatePhaseOutputToDFS(complete, applicationid,
-					((applicationid + taskid)));
+					(applicationid + taskid));
 			ctx = null;
 			hbts.pingOnce(taskid, TaskStatus.COMPLETED, TaskType.REDUCER, null);
-			log.debug("Submitted Reducer Completed:"+applicationid+taskid);
+			log.debug("Submitted Reducer Completed:" + applicationid + taskid);
 		} catch (Throwable ex) {
 			try {
 				var baos = new ByteArrayOutputStream();
@@ -96,11 +108,11 @@ public class TaskExecutorReducer implements Runnable{
 				ex.printStackTrace(failuremessage);
 				hbts.pingOnce(taskid, TaskStatus.FAILED, TaskType.REDUCER, new String(baos.toByteArray()));
 			} catch (Exception e) {
-				log.error("Send Message Error For Task Failed: ",e);
+				log.error("Send Message Error For Task Failed: ", e);
 			}
-			log.error("Submitted Reducer Failed:",ex);
+			log.error("Submitted Reducer Failed:", ex);
 		} finally {
-			if(es!=null) {
+			if (es != null) {
 				es.shutdown();
 			}
 		}
@@ -109,7 +121,6 @@ public class TaskExecutorReducer implements Runnable{
 	public HeartBeatTaskScheduler getHbts() {
 		return hbts;
 	}
-	
-	
-	
+
+
 }
