@@ -1,3 +1,18 @@
+/*
+ * Copyright 2021 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.github.mdc.tasks.scheduler;
 
 import java.io.File;
@@ -20,6 +35,7 @@ public class TaskScheduler implements Runnable {
 	Socket tss;
 	String[] args;
 	String filename;
+
 	public TaskScheduler(CuratorFramework cf, byte[] mrjar, String[] args, Socket tss, String filename) {
 		this.cf = cf;
 		this.mrjar = mrjar;
@@ -32,29 +48,29 @@ public class TaskScheduler implements Runnable {
 	public void run() {
 		final ClassLoader loader = Thread.currentThread().getContextClassLoader();
 		new File(MDCConstants.LOCAL_FS_APPJRPATH).mkdirs();
-		try (var fos = new FileOutputStream(MDCConstants.LOCAL_FS_APPJRPATH+filename);) {	
+		try (var fos = new FileOutputStream(MDCConstants.LOCAL_FS_APPJRPATH + filename);) {
 			fos.write(mrjar);
 			var clsloader = MDCMapReducePhaseClassLoader.newInstance(mrjar, loader);
 			Thread.currentThread().setContextClassLoader(clsloader);
-			var kryo = Utils.getKryoNonDeflateSerializer();
+			var kryo = Utils.getKryoSerializerDeserializer();
 			String[] argscopy;
 			//Get the main class to execute.
 			String mainclass;
-			if(args==null) {
-				argscopy = new String[] {};
+			if (args == null) {
+				argscopy = new String[]{};
 				mainclass = "";
 			} else {
 				mainclass = args[0];
 				argscopy = Arrays.copyOfRange(args, 1, args.length);
 			}
-			
-			var main = Class.forName(mainclass,true,clsloader);
+
+			var main = Class.forName(mainclass, true, clsloader);
 			var jc = JobConfigurationBuilder.newBuilder().build();
 			jc.setMrjar(mrjar);
 			var tssos = tss.getOutputStream();
 			var output = new Output(tssos);
 			jc.setOutput(output);
-			var mrjob = (Application) main.newInstance();
+			var mrjob = (Application) main.getDeclaredConstructor().newInstance();
 			mrjob.runMRJob(argscopy, jc);
 			kryo.writeClassAndObject(output, "Successfully Completed executing the task " + mainclass);
 			kryo.writeClassAndObject(output, "quit");
